Приступил к локации, стилизовал заголовок и текст в вверхнем блоке, выровнил

--- a/source/index.html
+++ b/source/index.html
@@ -199,7 +199,8 @@
           <h2 class="visually-hidden">Приглашение и локация</h2>
           <div class="location__invation">
             <h3 class="location__invation-title">
-              приглашаем к сотрудничеству дилеров!
+              приглашаем <br />
+              к сотрудничеству дилеров!
             </h3>
             <div class="location__place">
               <address class="location__address">
