--- a/source/index.html
+++ b/source/index.html
@@ -10,13 +10,21 @@
     <header class="main-header">
       <div class="main-header__wrapper">
         <a class="main-header__link" href="index.html">
-          <img
-            class="main-header__image"
-            src="./img/logo-icon-mobile.svg"
-            width="33"
-            height="38"
-            alt="Кэт энерджи"
-          />
+          <picture>
+            <source
+              media="(min-width: 769px)"
+              srcset="./img/logo-icon-tablet.svg"
+              width="174"
+              height="52"
+            />
+            <img
+              class="main-header__image"
+              src="./img/logo-icon-mobile.svg"
+              width="33"
+              height="38"
+              alt="Кэт энерджи"
+            />
+          </picture>
         </a>
         <nav class="main-header__nav main-nav main-nav--nojs main-nav--closed">
           <button class="main-nav__toggle" type="button">
