--- a/source/index.html
+++ b/source/index.html
@@ -32,21 +32,17 @@
           </button>
           <ul class="main-nav__list">
             <li class="main-nav__item">
-              <a
-                href="index.html"
-                class="main-nav__link main-nav__link--first-line main-nav__link--line"
+              <a href="index.html" class="main-nav__link main-nav__link"
                 >Главная</a
               >
             </li>
             <li class="main-nav__item">
-              <a href="catalog.html" class="main-nav__link main-nav__link--line"
+              <a href="catalog.html" class="main-nav__link"
                 >Каталог продукции</a
               >
             </li>
             <li class="main-nav__item">
-              <a href="form.html" class="main-nav__link main-nav__link--line"
-                >Подбор программы</a
-              >
+              <a href="form.html" class="main-nav__link">Подбор программы</a>
             </li>
           </ul>
         </nav>
