добавил нижнюю зеленую линию в активной странице, в навигации

--- a/source/index.html
+++ b/source/index.html
@@ -32,7 +32,9 @@
           </button>
           <ul class="main-nav__list">
             <li class="main-nav__item">
-              <a href="index.html" class="main-nav__link">Главная</a>
+              <a href="index.html" class="main-nav__link main-nav__link--active"
+                >Главная</a
+              >
             </li>
             <li class="main-nav__item">
               <a href="catalog.html" class="main-nav__link"
