Выровнил заголовок, текст, ячейки под планшетное разрешение

--- a/source/index.html
+++ b/source/index.html
@@ -97,25 +97,25 @@
           <h2 class="work-principle__title">Как это работает</h2>
           <ul class="work-principle__list">
             <li class="work-principle__item work-principle__item--leaf">
-              <p class="work-principle__text">
+              <p class="work-principle__text work-principle__text--leaf">
                 Функциональное питание содержит только полезные питательные
                 вещества.
               </p>
             </li>
             <li class="work-principle__item work-principle__item--powder">
-              <p class="work-principle__text">
+              <p class="work-principle__text work-principle__text--powder">
                 Выпускается в виде порошка, который нужно лишь залить кипятком и
                 готово.
               </p>
             </li>
             <li class="work-principle__item work-principle__item--cutlery">
-              <p class="work-principle__text">
+              <p class="work-principle__text work-principle__text--cutlery">
                 Замените один-два приема обычной еды на наше функциональное
                 питание.
               </p>
             </li>
             <li class="work-principle__item work-principle__item--watch">
-              <p class="work-principle__text">
+              <p class="work-principle__text work-principle__text--watch">
                 Уже через месяц наслаждайтесь изменениями к лучшему вашего
                 питомца!
               </p>
