Выровнил элементы в секции work-principle

--- a/source/index.html
+++ b/source/index.html
@@ -116,8 +116,8 @@
             </li>
             <li class="work-principle__item work-principle__item--watch">
               <p class="work-principle__text work-principle__text--watch">
-                Уже через месяц наслаждайтесь изменениями к лучшему вашего
-                питомца!
+                Уже через месяц наслаждайтесь изменениями к лучшему<br />
+                вашего питомца!
               </p>
             </li>
           </ul>
