Экспортировал изображение моб и планшетной версии

--- a/source/index.html
+++ b/source/index.html
@@ -152,7 +152,7 @@
           <div class="living-example__cat-result cat-result">
             <img
               class="cat-result__image"
-              src="./img/cat-before.png"
+              src="./img/cat-before-mobile.png"
               width="140"
               height="256"
               alt="кот до того"
@@ -189,7 +189,7 @@
             </button>
             <img
               class="cat-result__image"
-              src="./img/cat-after.png"
+              src="./img/cat-after-mobile.png"
               width="140"
               height="256"
               alt="кот до того"
