--- a/source/index.html
+++ b/source/index.html
@@ -133,21 +133,23 @@
             этом он не менял своих привычек и по-прежнему спит по 16 часов
             <br />в день.
           </p>
-          <dl class="living-example__list">
-            <div class="living-example__item">
-              <dt class="living-example__item-heading">5 кг</dt>
-              <dd class="living-example__item-text">снижение веса</dd>
+          <div class="living-example__description-container">
+            <dl class="living-example__list">
+              <div class="living-example__item">
+                <dt class="living-example__item-heading">5 кг</dt>
+                <dd class="living-example__item-text">снижение веса</dd>
+              </div>
+              <div class="living-example__item">
+                <dt class="living-example__item-heading">60 дней</dt>
+                <dd class="living-example__item-text">затрачено времени</dd>
+              </div>
+            </dl>
+            <div class="living-example__result">
+              <span class="living-example__result-expenses"
+                >Затраты на питание:</span
+              >
+              <span class="living-example__result-price">15 000 руб.</span>
             </div>
-            <div class="living-example__item">
-              <dt class="living-example__item-heading">60 дней</dt>
-              <dd class="living-example__item-text">затрачено времени</dd>
-            </div>
-          </dl>
-          <div class="living-example__result">
-            <span class="living-example__result-expenses"
-              >Затраты на питание:</span
-            >
-            <span class="living-example__result-price">15 000 руб.</span>
           </div>
           <div class="living-example__cat-result cat-result">
             <img
