Стилизовал элементы, проверил переполнение соц сетей в футере

--- a/source/index.html
+++ b/source/index.html
@@ -337,6 +337,7 @@
           class="main-footer__html-academy-logo"
           >HTML Academy
           <svg
+            class="main-footer__html-academy-icon"
             width="27"
             height="34"
             viewBox="0 0 27 34"
