ограничил ширину в тексте html academy, чтобы логотип не уменьшался. Закончил верстку в планшете

--- a/source/index.html
+++ b/source/index.html
@@ -335,7 +335,7 @@
         <a
           href="https://up.htmlacademy.ru/"
           class="main-footer__html-academy-logo"
-          >HTML Academy
+          ><span class="main-footer__html-academy-text">HTML Academy</span>
           <svg
             class="main-footer__html-academy-icon"
             width="27"
