Приступил к десктопу, начал с шапки, стилизовал под дескопное разрешение

--- a/source/index.html
+++ b/source/index.html
@@ -12,6 +12,12 @@
         <a class="main-header__link" href="index.html">
           <picture>
             <source
+              media="(min-width: 1440px)"
+              srcset="./img/logo-icon-desktop.svg"
+              width="202"
+              heigh="59"
+            />
+            <source
               media="(min-width: 769px)"
               srcset="./img/logo-icon-tablet.svg"
               width="174"
