Добавил класс навигации с модификатором index, чтобы добавить шрифт белого цвета

--- a/source/index.html
+++ b/source/index.html
@@ -38,17 +38,23 @@
           </button>
           <ul class="main-nav__list">
             <li class="main-nav__item">
-              <a href="index.html" class="main-nav__link main-nav__link--active"
+              <a
+                href="index.html"
+                class="main-nav__link main-nav__link--active main-nav__link--index"
                 >Главная</a
               >
             </li>
             <li class="main-nav__item">
-              <a href="catalog.html" class="main-nav__link"
+              <a
+                href="catalog.html"
+                class="main-nav__link main-nav__link--index"
                 >Каталог продукции</a
               >
             </li>
             <li class="main-nav__item">
-              <a href="form.html" class="main-nav__link">Подбор программы</a>
+              <a href="form.html" class="main-nav__link main-nav__link--index"
+                >Подбор программы</a
+              >
             </li>
           </ul>
         </nav>
