Добавил белый фон псевдоэлементу на главной странице - ссылке

--- a/source/index.html
+++ b/source/index.html
@@ -40,7 +40,7 @@
             <li class="main-nav__item">
               <a
                 href="index.html"
-                class="main-nav__link main-nav__link--active main-nav__link--index"
+                class="main-nav__link main-nav__link--active main-nav__link--index main-nav__link--index-active"
                 >Главная</a
               >
             </li>
