Добавил псевдоэлемент - фон кота на зеленом фоне в десктопе. Выровнил пачку в nutrition - псевдоэлемент

--- a/source/index.html
+++ b/source/index.html
@@ -65,17 +65,19 @@
       <h1 class="visually-hidden">Программа - Кэт энерджи</h1>
 
       <section class="nutrition">
-        <div class="nutrition__wrapper">
-          <div class="nutrition__container-description">
-            <h2 class="nutrition__title title">
-              Функциональное питание для котов
-            </h2>
-            <p class="nutrition__text">Занялся собой? Займись котом!</p>
+        <section class="nutrition__block">
+          <div class="nutrition__wrapper">
+            <div class="nutrition__container-description">
+              <h2 class="nutrition__title title">
+                Функциональное питание для котов
+              </h2>
+              <p class="nutrition__text">Занялся собой? Займись котом!</p>
+            </div>
           </div>
-        </div>
-        <a class="nutrition__link button" href="form.html"
-          >Подобрать программу</a
-        >
+          <a class="nutrition__link button" href="form.html"
+            >Подобрать программу</a
+          >
+        </section>
       </section>
 
       <section class="program-type">
