Добавил псевдоэлемент в body в десктопе, при переполнении навигации зеленый фон с котом будет расстягиваться

--- a/source/index.html
+++ b/source/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./css/style.css" />
     <title>Главная</title>
   </head>
-  <body>
+  <body class="page-body page-body--index">
     <header class="main-header">
       <div class="main-header__wrapper">
         <a class="main-header__link" href="index.html">
