--- a/source/index.html
+++ b/source/index.html
@@ -140,29 +140,31 @@
 
       <section class="living-example">
         <h2 class="living-example__title">Живой пример</h2>
-        <div class="living-example__wrapper">
-          <p class="living-example__text">
-            Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на
-            Cat Energy Slim. Отличный результат без изнуряющих тренировок! При
-            этом он не менял своих привычек и по-прежнему спит по 16 часов
-            <br />в день.
-          </p>
-          <div class="living-example__description-container">
-            <dl class="living-example__list">
-              <div class="living-example__item">
-                <dt class="living-example__item-heading">5 кг</dt>
-                <dd class="living-example__item-text">снижение веса</dd>
+        <div class="living-example__block">
+          <div class="living-example__wrapper">
+            <p class="living-example__text">
+              Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм
+              на Cat Energy Slim. Отличный результат без изнуряющих тренировок!
+              При этом он не менял своих привычек и по-прежнему спит по 16 часов
+              <br />в день.
+            </p>
+            <div class="living-example__description-container">
+              <dl class="living-example__list">
+                <div class="living-example__item">
+                  <dt class="living-example__item-heading">5 кг</dt>
+                  <dd class="living-example__item-text">снижение веса</dd>
+                </div>
+                <div class="living-example__item">
+                  <dt class="living-example__item-heading">60 дней</dt>
+                  <dd class="living-example__item-text">затрачено времени</dd>
+                </div>
+              </dl>
+              <div class="living-example__result">
+                <span class="living-example__result-expenses"
+                  >Затраты на питание:</span
+                >
+                <span class="living-example__result-price">15 000 руб.</span>
               </div>
-              <div class="living-example__item">
-                <dt class="living-example__item-heading">60 дней</dt>
-                <dd class="living-example__item-text">затрачено времени</dd>
-              </div>
-            </dl>
-            <div class="living-example__result">
-              <span class="living-example__result-expenses"
-                >Затраты на питание:</span
-              >
-              <span class="living-example__result-price">15 000 руб.</span>
             </div>
           </div>
           <div class="living-example__cat-result cat-result">
