Стилизовал футер, обертку футера под десктоп

--- a/source/index.html
+++ b/source/index.html
@@ -265,12 +265,20 @@
 
       <div class="main-footer__wrapper">
         <a class="main-footer__logo" href="index.html">
-          <img
-            src="./img/logo-text-mobile.svg"
-            width="128"
-            height="24"
-            alt="Кэт энерджи"
-          />
+          <picture>
+            <source
+              media="(min-width: 769px)"
+              srcset="./img/logo-text-mobile.svg"
+              width="143"
+              height="26"
+            />
+            <img
+              src="./img/logo-text-mobile.svg"
+              width="128"
+              height="24"
+              alt="Кэт энерджи"
+            />
+          </picture>
         </a>
 
         <ul class="main-footer__social social">
