Выровнил все элементы по pp

--- a/source/index.html
+++ b/source/index.html
@@ -65,7 +65,7 @@
       <h1 class="visually-hidden">Программа - Кэт энерджи</h1>
 
       <section class="nutrition">
-        <section class="nutrition__block">
+        <div class="nutrition__block">
           <div class="nutrition__wrapper">
             <div class="nutrition__container-description">
               <h2 class="nutrition__title title">
@@ -77,7 +77,7 @@
           <a class="nutrition__link button" href="form.html"
             >Подобрать программу</a
           >
-        </section>
+        </div>
       </section>
 
       <section class="program-type">
