--- a/source/form.html
+++ b/source/form.html
@@ -32,7 +32,7 @@
             />
           </picture>
         </a>
-        <nav class="main-header__nav main-nav main-nav--nojs main-nav--closed">
+        <nav class="main-header__nav main-nav main-nav--closed">
           <button class="main-nav__toggle" type="button">
             <span class="visually-hidden">Открыть меню</span>
           </button>
@@ -404,5 +404,7 @@
         </a>
       </div>
     </footer>
+
+    <script src="./script.js"></script>
   </body>
 </html>
