подключил файл title, начал стилизацию формы с мобильной версии

--- a/source/form.html
+++ b/source/form.html
@@ -61,10 +61,8 @@
       </div>
     </header>
 
-    <main class="main-container">
-      <h1 class="main-container__title main-container__title--form">
-        Подбор программы
-      </h1>
+    <main class="main-container form-page">
+      <h1 class="form-page__title title">Подбор программы</h1>
 
       <form class="main-form" action="#" method="post">
         <section class="main-form__cat-information cat-information">
