стилизовал заголовок и описание в форме под мобильное разрешение, добавил нижний бордер в форме и в каталоге в хэдере

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -7,7 +7,7 @@
     <title>Каталог продукции</title>
   </head>
   <body>
-    <header class="main-header">
+    <header class="main-header main-header--line">
       <div class="main-header__wrapper">
         <a class="main-header__link" href="index.html">
           <picture>
