Приступил к стилизации формы и полей в моб. разрешении

--- a/source/form.html
+++ b/source/form.html
@@ -68,7 +68,25 @@
       </p>
 
       <form class="form" action="#">
-        <section class="form__section info"></section>
+        <section class="form__section info">
+          <ul class="info__list">
+            <li class="info__item">
+              <label for="" class="field-text__label">
+                <input type="text" class="field-text__input"
+              /></label>
+            </li>
+            <li class="info__item">
+              <label for="" class="field-text__label">
+                <input type="text" class="field-text__input"
+              /></label>
+            </li>
+            <li class="info__item">
+              <label for="" class="field-text__label">
+                <input type="text" class="field-text__input"
+              /></label>
+            </li>
+          </ul>
+        </section>
         <section class="form__section"></section>
         <section class="form__section"></section>
         <section class="form__section"></section>
