--- a/source/form.html
+++ b/source/form.html
@@ -38,23 +38,17 @@
           </button>
           <ul class="main-nav__list">
             <li class="main-nav__item">
-              <a
-                href="index.html"
-                class="main-nav__link main-nav__link--active main-nav__link--index main-nav__link--index-active"
+              <a href="index.html" class="main-nav__link main-nav__link--active"
                 >Главная</a
               >
             </li>
             <li class="main-nav__item">
-              <a
-                href="catalog.html"
-                class="main-nav__link main-nav__link--index"
+              <a href="catalog.html" class="main-nav__link"
                 >Каталог продукции</a
               >
             </li>
             <li class="main-nav__item">
-              <a href="form.html" class="main-nav__link main-nav__link--index"
-                >Подбор программы</a
-              >
+              <a href="form.html" class="main-nav__link">Подбор программы</a>
             </li>
           </ul>
         </nav>
@@ -69,21 +63,19 @@
 
       <form class="form" action="#">
         <section class="form__section info">
+          <h2 class="visually-hidden">Тип информации кота</h2>
           <ul class="info__list">
-            <li class="info__item">
-              <label for="" class="field-text__label">
-                <input type="text" class="field-text__input"
-              /></label>
+            <li class="info__item text-input">
+              <label for="name" class="text-input__label">ИМЯ:*</label>
+              <input class="text-input__input" type="text" id="name" />
             </li>
-            <li class="info__item">
-              <label for="" class="field-text__label">
-                <input type="text" class="field-text__input"
-              /></label>
+            <li class="info__item text-input">
+              <label for="weight" class="text-input__label">Вес (кг):*</label>
+              <input class="text-input__input" type="text" id="weight" />
             </li>
-            <li class="info__item">
-              <label for="" class="field-text__label">
-                <input type="text" class="field-text__input"
-              /></label>
+            <li class="info__item text-input">
+              <label for="age" class="text-input__label">Возраст (лет):</label>
+              <input class="text-input__input" type="text" id="age" />
             </li>
           </ul>
         </section>
