Закончил стилизацию text-input в мобильной версии

--- a/source/form.html
+++ b/source/form.html
@@ -67,15 +67,30 @@
           <ul class="info__list">
             <li class="info__item text-input">
               <label for="name" class="text-input__label">ИМЯ:*</label>
-              <input class="text-input__input" type="text" id="name" />
+              <input
+                class="text-input__input"
+                type="text"
+                id="name"
+                placeholder="Барсик"
+              />
             </li>
             <li class="info__item text-input">
               <label for="weight" class="text-input__label">Вес (кг):*</label>
-              <input class="text-input__input" type="text" id="weight" />
+              <input
+                class="text-input__input"
+                type="text"
+                id="weight"
+                placeholder="7"
+              />
             </li>
             <li class="info__item text-input">
               <label for="age" class="text-input__label">Возраст (лет):</label>
-              <input class="text-input__input" type="text" id="age" />
+              <input
+                class="text-input__input"
+                type="text"
+                id="age"
+                placeholder="7"
+              />
             </li>
           </ul>
         </section>
