Добавил значения в радио-кнопках

--- a/source/form.html
+++ b/source/form.html
@@ -107,6 +107,7 @@
                 type="radio"
                 id="weight-loss"
                 name="type-program"
+                value="weight-loss"
                 checked
               />
               <label class="radio-input__label" for="weight-loss"
@@ -119,6 +120,7 @@
                 type="radio"
                 id="weight-gain"
                 name="type-program"
+                value="weight-gain"
               />
               <label class="radio-input__label" for="weight-gain"
                 >Набор массы</label
@@ -130,6 +132,7 @@
                 type="radio"
                 id="advice"
                 name="type-program"
+                value="advice"
               />
               <label class="radio-input__label" for="advice"
                 >Не знаю (Нужен ваш совет)</label
