Добавил состояние полям в info, добавил им атрибут required

--- a/source/form.html
+++ b/source/form.html
@@ -73,6 +73,7 @@
                 id="name"
                 name="name"
                 placeholder="Барсик"
+                required
               />
             </li>
             <li class="info__item text-input">
@@ -83,6 +84,7 @@
                 id="weight"
                 name="weight"
                 placeholder="7"
+                required
               />
             </li>
             <li class="info__item text-input">
@@ -93,6 +95,7 @@
                 id="age"
                 name="age"
                 placeholder="7"
+                required
               />
             </li>
           </ul>
@@ -108,6 +111,7 @@
                 id="weight-loss"
                 name="type-program"
                 value="weight-loss"
+                required
                 checked
               />
               <label class="radio-input__label" for="weight-loss"
@@ -121,6 +125,7 @@
                 id="weight-gain"
                 name="type-program"
                 value="weight-gain"
+                required
               />
               <label class="radio-input__label" for="weight-gain"
                 >Набор массы</label
@@ -133,6 +138,7 @@
                 id="advice"
                 name="type-program"
                 value="advice"
+                required
               />
               <label class="radio-input__label" for="advice"
                 >Не знаю (Нужен ваш совет)</label
