Поправил состояние text-input. Добавил состояние radio-input

--- a/source/form.html
+++ b/source/form.html
@@ -73,6 +73,7 @@
                 id="name"
                 name="name"
                 placeholder="Барсик"
+                value="Барсик"
                 required
               />
             </li>
@@ -84,6 +85,7 @@
                 id="weight"
                 name="weight"
                 placeholder="7"
+                value="7"
                 required
               />
             </li>
@@ -95,6 +97,7 @@
                 id="age"
                 name="age"
                 placeholder="7"
+                value="7"
                 required
               />
             </li>
