приступил  к стилизации contact-details, и к компоненту title-line

--- a/source/form.html
+++ b/source/form.html
@@ -149,7 +149,11 @@
             </li>
           </ul>
         </section>
-        <section class="form__section"></section>
+        <section class="form__section contact-details">
+          <h2 class="contact-details__title title-line">
+            Контактные данные (владельца кота)
+          </h2>
+        </section>
         <section class="form__section"></section>
         <section class="form__section"></section>
       </form>
