Стилизовал псевдоэлемент - зеленую линию для contact-details.

--- a/source/form.html
+++ b/source/form.html
@@ -150,7 +150,7 @@
           </ul>
         </section>
         <section class="form__section contact-details">
-          <h2 class="contact-details__title title-line">
+          <h2 class="contact-details__title title-medium">
             Контактные данные (владельца кота)
           </h2>
         </section>
