--- a/source/form.html
+++ b/source/form.html
@@ -153,6 +153,30 @@
           <h2 class="contact-details__title title-medium">
             Контактные данные (владельца кота)
           </h2>
+          <ul class="contact-details__list">
+            <li class="contact-details__item text-input">
+              <label for="email" class="text-input__label">E-mail:*</label>
+              <input
+                class="text-input__input"
+                type="text"
+                id="email"
+                placeholder="kuklachev@gmail.com"
+                value="kuklachev@gmail.com"
+                required
+              />
+            </li>
+            <li class="contact-details__item text-input">
+              <label for="phone" class="text-input__label">Телефон:*</label>
+              <input
+                class="text-input__input"
+                type="text"
+                id="phone"
+                placeholder="8 (960) 900-60-90"
+                value="8 (960) 900-60-90"
+                required
+              />
+            </li>
+          </ul>
         </section>
         <section class="form__section"></section>
         <section class="form__section"></section>
