Стилизовал comments, добавил комментарий и к нему состояние

--- a/source/form.html
+++ b/source/form.html
@@ -178,7 +178,21 @@
             </li>
           </ul>
         </section>
-        <section class="form__section"></section>
+
+        <section class="form__section comments">
+          <h2 class="comments__title title-medium">Комментарий</h2>
+          <textarea
+            class="comments__textarea textarea"
+            name="comments"
+            id="comments"
+            cols="30"
+            rows="10"
+            placeholder="Расскажите обо всех повадках кота"
+            required
+          >
+Расскажите обо всех повадках кота</textarea
+          >
+        </section>
         <section class="form__section"></section>
       </form>
     </main>
