Стилизовал поля с чекбоксами в additional

--- a/source/form.html
+++ b/source/form.html
@@ -204,6 +204,7 @@
                 id="sweetener"
                 name="sweetener"
                 required
+                checked
               />
               <label for="sweetener" class="checkbox-input__label"
                 >Сахарозаменитель</label
