Стилизовал additional, кнопку формы и обязательный текст

--- a/source/form.html
+++ b/source/form.html
@@ -246,6 +246,10 @@
             </li>
           </ul>
         </section>
+        <button class="form__button button" type="sumbit">
+          Отправить заявку
+        </button>
+        <p class="form__text-required">* — Обязательные поля</p>
       </form>
     </main>
 
