--- a/source/catalog.html
+++ b/source/catalog.html
@@ -395,22 +395,23 @@
       <section class="location">
         <div class="location__wrapper">
           <h2 class="visually-hidden">Приглашение и локация</h2>
-          <div class="location__invation location__invation--grey">
+          <div class="location__invation">
             <h3 class="location__invation-title">
-              приглашаем к сотрудничеству дилеров!
+              приглашаем <br />
+              к сотрудничеству дилеров!
             </h3>
-            <div class="location__place">
-              <address class="location__address">
-                <p class="location__address-text">
-                  ул. Большая Конюшенная, д. 19/8
-                </p>
-                <p class="location__address-city">Санкт-Петербург</p>
-              </address>
-            </div>
+            <address class="location__address">
+              <p class="location__address-text">
+                ул. Большая Конюшенная, д. 19/8
+              </p>
+              <p class="location__address-city">Санкт-Петербург</p>
+            </address>
           </div>
           <div class="location__map">
             <iframe
+              class="location__map-iframe"
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1996.8224469757404!2d30.314833977305664!3d59.96826865971364!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5afc31%3A0x5f2ac55f567b2400!2sHTML%20Academy!5e0!3m2!1sru!2sru!4v1699541386937!5m2!1sru!2sru"
+              height="450"
               style="border: 0"
               allowfullscreen=""
               loading="lazy"
@@ -508,8 +509,9 @@
         <a
           href="https://up.htmlacademy.ru/"
           class="main-footer__html-academy-logo"
-          >HTML Academy
+          ><span class="main-footer__html-academy-text">HTML Academy</span>
           <svg
+            class="main-footer__html-academy-icon"
             width="27"
             height="34"
             viewBox="0 0 27 34"
