Добавил классы в локации, добавил модификатор --index для белого фона в location

--- a/source/form.html
+++ b/source/form.html
@@ -254,7 +254,7 @@
     </main>
 
     <footer class="main-footer">
-      <section class="location">
+      <section class="main-footer__location location">
         <div class="location__wrapper">
           <h2 class="visually-hidden">Приглашение и локация</h2>
           <div class="location__invation">
