--- a/source/index.html
+++ b/source/index.html
@@ -234,10 +234,10 @@
     </main>
 
     <footer class="main-footer">
-      <section class="location">
+      <section class="main-footer__location location">
         <div class="location__wrapper">
           <h2 class="visually-hidden">Приглашение и локация</h2>
-          <div class="location__invation">
+          <div class="location__invation location__invation--index">
             <h3 class="location__invation-title">
               приглашаем <br />
               к сотрудничеству дилеров!
