--- a/source/form.html
+++ b/source/form.html
@@ -38,9 +38,7 @@
           </button>
           <ul class="main-nav__list">
             <li class="main-nav__item">
-              <a href="index.html" class="main-nav__link main-nav__link--active"
-                >Главная</a
-              >
+              <a href="index.html" class="main-nav__link">Главная</a>
             </li>
             <li class="main-nav__item">
               <a href="catalog.html" class="main-nav__link"
@@ -48,7 +46,9 @@
               >
             </li>
             <li class="main-nav__item">
-              <a href="form.html" class="main-nav__link">Подбор программы</a>
+              <a href="form.html" class="main-nav__link main-nav__link--active"
+                >Подбор программы</a
+              >
             </li>
           </ul>
         </nav>
