Стилизовал additional, кнопку и текст в form

--- a/source/form.html
+++ b/source/form.html
@@ -197,55 +197,57 @@
 
         <section class="form__section additional">
           <h2 class="additional__title title-medium">Дополнительно</h2>
-          <ul class="additional__list">
-            <li class="additional__item checkbox-input">
-              <input
-                class="checkbox-input__input visually-hidden"
-                type="checkbox"
-                id="sweetener"
-                name="sweetener"
-                required
-                checked
-              />
-              <label for="sweetener" class="checkbox-input__label"
-                >Сахарозаменитель</label
-              >
-            </li>
-            <li class="additional__item checkbox-input">
-              <input
-                class="checkbox-input__input visually-hidden"
-                type="checkbox"
-                id="drinking-water"
-                name="drinking-water"
-                required
-              />
-              <label for="drinking-water" class="checkbox-input__label"
-                >Питьевая вода</label
-              >
-            </li>
-            <li class="additional__item checkbox-input">
-              <input
-                class="checkbox-input__input visually-hidden"
-                type="checkbox"
-                id="milk"
-                name="milk"
-                required
-              />
-              <label for="milk" class="checkbox-input__label">Молоко</label>
-            </li>
-            <li class="additional__item checkbox-input">
-              <input
-                class="checkbox-input__input visually-hidden"
-                type="checkbox"
-                id="vitamins"
-                name="vitamins"
-                required
-              />
-              <label for="vitamins" class="checkbox-input__label"
-                >Витамины</label
-              >
-            </li>
-          </ul>
+          <div class="additional__wrapper">
+            <ul class="additional__list">
+              <li class="additional__item checkbox-input">
+                <input
+                  class="checkbox-input__input visually-hidden"
+                  type="checkbox"
+                  id="sweetener"
+                  name="sweetener"
+                  required
+                  checked
+                />
+                <label for="sweetener" class="checkbox-input__label"
+                  >Сахарозаменитель</label
+                >
+              </li>
+              <li class="additional__item checkbox-input">
+                <input
+                  class="checkbox-input__input visually-hidden"
+                  type="checkbox"
+                  id="drinking-water"
+                  name="drinking-water"
+                  required
+                />
+                <label for="drinking-water" class="checkbox-input__label"
+                  >Питьевая вода</label
+                >
+              </li>
+              <li class="additional__item checkbox-input">
+                <input
+                  class="checkbox-input__input visually-hidden"
+                  type="checkbox"
+                  id="milk"
+                  name="milk"
+                  required
+                />
+                <label for="milk" class="checkbox-input__label">Молоко</label>
+              </li>
+              <li class="additional__item checkbox-input">
+                <input
+                  class="checkbox-input__input visually-hidden"
+                  type="checkbox"
+                  id="vitamins"
+                  name="vitamins"
+                  required
+                />
+                <label for="vitamins" class="checkbox-input__label"
+                  >Витамины</label
+                >
+              </li>
+            </ul>
+          </div>
         </section>
         <button class="form__button button" type="sumbit">
           Отправить заявку
