Приступил к верстке десктопа в форме, выровнил линию - зеленую, Стилизовал заголовок страницы и текст

--- a/source/form.html
+++ b/source/form.html
@@ -58,7 +58,8 @@
     <main class="main-container form-page">
       <h1 class="form-page__title title">Подбор программы</h1>
       <p class="form-page__description description">
-        Заполните анкету, и мы подберем программу питания для вашего кота
+        Заполните анкету, и мы подберем<br />
+        программу питания для вашего кота
       </p>
 
       <form class="form" action="#">
